Fixed travis push URLs

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,13 +24,12 @@ deploy:
     secure: jbSFy9O9KS08AZK1LVpYF7ZDX2eU0hoqh3wcsBulm2Dydp0i03p7cJgi+ZIn0wE8hmZ0L9DLBL13v6+6qylan0YtUTjWDEaNRTkE4WR145QtTIu8dSUPsc9/6O6yD7IMqjqoP7SGXX0PC/jKaJZykV8sWgawUx9gakYIIQi+43c=
 
 after_success:
-  # TODO update git urls below
   # Various pushes to branches. Need to pipe to null to not expose OAuth token
   - if [[ "$TRAVIS_BRANCH" == "master" ]]; then
-      git push https://${GH_OAUTH_TOKEN}@github.com/you/unnamedapp master:staging > /dev/null 2>&1;
+      git push https://${GH_OAUTH_TOKEN}@github.com/pimterry/tim-perry.co.uk master:staging > /dev/null 2>&1;
     fi
   - if [[ "$TRAVIS_BRANCH" == "staging" ]]; then
-      git push https://${GH_OAUTH_TOKEN}@github.com/you/unnamedapp staging:prod > /dev/null 2>&1;
+      git push https://${GH_OAUTH_TOKEN}@github.com/pimterry/tim-perry.co.uk staging:prod > /dev/null 2>&1;
     fi
 
 branches:
