--- a/newrelic.yml
+++ b/newrelic.yml
@@ -1,4 +1,6 @@
 common: &default_settings
+  license_key: <%= ENV['NEW_RELIC_LICENSE_KEY'] %>
+  app_name: <%= ENV['NEW_RELIC_APPLICATION_NAME'] %>
   agent_enabled: auto
   monitor_mode: true
   developer_mode: false
